# rust-commons

./: Cargo.toml
di/: Cargo.toml
di/src/: di_tests.rs  iface.rs  impls.rs
orm/: Cargo.toml
orm/src/: gen.rs  generators.rs  lib.rs  schema_gen.rs
orm/src/abstractions/: db.rs  helpers.rs  mod.rs  selector.rs
orm/src/abstractions/dbs/: mod.rs  mysql.rs  pg.rs
orm/src/components/: mod.rs  orm.rs
orm/templates/: db_tables.hbr  migration.hbr  mod.hbr  table.hbr
orm/templates/migrations/: initial_table_migration.hbr
orm/templates/tables/: mod.hbr  table.hbr
schema_reader/: Cargo.toml
schema_reader/src/abstraction/: mod.rs  render.rs
schema_reader/src/components/: field.rs  mod.rs  schema.rs  table.rs  types.rs
schema_reader/src/util/: err.rs  helpers.rs
src/: lib.rs  main.rs
src/di/: di_tests.rs  iface.rs  impls.rs  mod.rs
src/orm/: dev.rs  generate_schema.rs  mod.rs
src/orm/abstractions/: selector.rs
src/orm/abstractions/dbs/: sqlite.rs
src/orm/components/: orm.rs
src/schema_reader/: mod.rs
src/schema_reader/abstraction/: render.rs
src/schema_reader/components/: schema.rs  table.rs
src/schema_reader/util/: helpers.rs  mod.rs
utils/: Cargo.toml
utils/src/: lib.rs
utils/src/helpers/: env.rs  mod.rs  wrapper.rs
