[package]
name = "rust-commons"
version = "0.1.0"
edition = "2024"

[features]
default = ["downcast_unchecked", "postgres"]
downcast_unchecked = []

postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls","chrono", "uuid", "derive", "bigdecimal"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
chrono = "0.4.41"
bigdecimal = "0.4.8"
handlebars = "6.3.2"
futures-core = "0.3.31"
hashbrown = { version = "0.16.0", features = ["serde"] }
serde_yaml = "0.9.34"


[[bin]]
name = "dev"
path = "src/dev.rs"

[[bin]]
name = "gen_orm_schema"
path = "src/orm/generate_schema.rs"
